various minor template changes

--- a/templates/meals/ingredients.html
+++ b/templates/meals/ingredients.html
@@ -8,6 +8,13 @@
             {{ item }}</li>
     {% endfor %}
     </ul>
+    <h1>Copy pasta</h1>
+    <textarea style="height:500px;width:300px;">
+        {% for item in shoppinglist %}
+            {{ item }}
+        {% endfor %}
+    </textarea>
+
 {% else %}
     <p>No polls are available.</p>
 {% endif %}
